# semester-work-avl-tree-004

./: CMakeLists.txt  README.md  main.cpp
benchmark/: CMakeLists.txt  demo_benchmark.cpp  eraseBenchmark.cpp  erase_benchmark.cpp  findBenchmark.cpp  find_benchmark.cpp  find_max_and_min_benchmark.cpp  insertBenchmark.cpp  insert_benchmark.cpp
benchmark/result/: eraseResults.csv  findResults.csv  insertResults.csv
dataset/: generate_csv_dataset.cpp
dataset/data/: dataset-example.csv
include/: AVLTree.hpp  AVLTreeNode.hpp
src/: AVLTree.cpp  AVLTreeNode.cpp
